--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -1004,3 +1004,18 @@ pre code {
   margin: 0 0.2em 0.25em -1.6em;
   vertical-align: middle;
 }
+
+/* additions */
+
+.meeting_metadata {
+  width: 80%;
+  margin: 2em;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 1px solid rgba(0,0,0,.125);
+}
+
+.meeting_metadata .label {
+  font-weight: 100;
+  text-transform: uppercase;
+}
