--- a/template/meta.html
+++ b/template/meta.html
@@ -1,13 +1,22 @@
 <div class="meeting_metadata">
   <h1><span class="meeting_series">{{meeting_series}}</span> <span class="meeting_number">{{meeting_number}}</span></h1>
   <div><span class="label">date and time:</span> {{date}}</div>
-  <div>meeting url <a>{{meeting_url}}</a></div>
+  <div><span class="label">meeting url:</span> <a href="{{meeting_url}}">{{meeting_url}}</a></div>
   <div class="participants">
     <div class="label">participants:</div>
     <ul>
       {{#participants}}
       <li>{{.}}</li>
       {{/participants}}
+    </ul>
+  </div>
+
+  <div class="notes">
+    <div class="label">notes:</div>
+    <ul class="notes_list">
+      {{#notes}}
+      <li>{{.}}</li>
+      {{/notes}}
     </ul>
   </div>
 
