--- a/template/meta.html
+++ b/template/meta.html
@@ -1,6 +1,7 @@
 <div class="meeting_metadata">
+  <div class="meetings_repository"><a href="https://github.com/AI-Forensics/Meetings/">https://github.com/AI-Forensics/Meetings/</a></div>
   <h1><span class="meeting_series">{{meeting_series}}</span> <span class="meeting_number">{{meeting_number}}</span></h1>
-  <div><span class="label">date and time:</span> {{date}}</div>
+  <div class="date_time"><span class="label">date/time:</span> {{date}}</div>
   <div><span class="label">meeting url:</span> <a href="{{meeting_url}}">{{meeting_url}}</a></div>
   <div class="participants">
     <div class="label">participants:</div>
@@ -12,7 +13,7 @@
   </div>
 
   <div class="notes">
-    <div class="label">notes:</div>
+    <h2 class="label">notes:</h2>
     <ul class="notes_list">
       {{#notes}}
       <li>{{.}}</li>
