--- a/template/meta.html
+++ b/template/meta.html
@@ -1,5 +1,5 @@
 <div class="meeting_metadata">
-  <div class="meetings_repository label">><span class="label">meetings repository:</span><a href="https://github.com/AI-Forensics/Meetings/">https://github.com/AI-Forensics/Meetings/</a></div>
+  <div class="meetings_repository label"><span class="label">meetings repository:</span><a href="https://github.com/AI-Forensics/Meetings/"> https://github.com/AI-Forensics/Meetings/</a></div>
   <h1><span class="meeting_series">{{meeting_series}}</span> <span class="meeting_number">{{meeting_number}}</span></h1>
   <div class="date_time"><span class="label">date/time:</span> {{date}}</div>
   <div><span class="label">meeting url:</span> <a href="{{meeting_url}}">{{meeting_url}}</a></div>
