--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -1065,7 +1065,7 @@ pre code {
 
 .meeting_metadata .notes ul {
   list-style: none;
-  margin: .5em 0 0 0;
+  margin: 1em 0 0 0;
   padding: 0;
 }
 
@@ -1101,7 +1101,7 @@ a[href^="https://mattermost"]::after {
 a[href^="https://github.com"]::after {
   content: "github";
 
-  background-color: #0366d6;
+  background-color: #0099ff;
   color: white;
 }
 
@@ -1130,7 +1130,6 @@ a[href^="https://mattermost"]::after {
 .notes a[href^="https"][href*="zoom.us"]::after {
   content: "meeting";
 
-  border: 1px solid #495f75;
   background-color: #fff8c5;
   color: #495f75;
 }
