--- a/template/meta.html
+++ b/template/meta.html
@@ -3,6 +3,8 @@
   <h1><span class="meeting_series">{{meeting_series}}</span> <span class="meeting_number">{{meeting_number}}</span></h1>
   <div class="date_time"><span class="label">date/time:</span> {{date}}</div>
   <div><span class="label">meeting url:</span> <a href="{{meeting_url}}">{{meeting_url}}</a></div>
+  <div><span class="label">agenda:</span> <a href="{{agenda_planning}}">{{agenda_planning}}</a></div>
+  <div><span class="label">mattermost channel:</span> <a href="{{mattermost_channel}}">{{mattermost_channel}}</a></div>
   <div class="participants">
     <div class="label">participants:</div>
     <ul>
