--- a/template/keep_mind.html
+++ b/template/keep_mind.html
@@ -1,8 +1,9 @@
 <div class="info_box keep_mind">
-  <div class="action">
-    <span class="label">Keep in mind</span>  
+  <div class="action fauxheading">
+    <span class="label">Keep in mind</span>
+  </div>  
     <p class="whomst">{{whomst}}</p>
     <p class="description">{{description}}</p>
-  </div>
+
 
   </div>
