--- a/template/to_do.html
+++ b/template/to_do.html
@@ -1,9 +1,13 @@
 <div class="info_box to_do">
-  <div class="action">
-    <span class="label">{{action}}</span>  <div class="date_time due"><span class="label">by:</span> {{date}}</div>
+  <div class="action fauxheading">
+    <span class="label">{{action}}</span> 
+  </div>
+  <div class="content">
+    <div class="date_time due">
+      <span class="label">by:</span> {{date}}
+    </div>
     <p class="whomst">{{whomst}}</p>
     <p class="description">{{description}}</p>
     <a class="task_url" href="{{task_url}}">link</a>
   </div>
-
-  </div>
+</div>
