--- a/template/to_do.html
+++ b/template/to_do.html
@@ -1,4 +1,4 @@
-<div class="info_box to_do">
+<div class="info_box todo">
   <div class="action fauxheading">
     <span class="label">{{action}}</span> 
   </div>
