--- a/template/to_do.html
+++ b/template/to_do.html
@@ -8,6 +8,6 @@
     </div>
     <p class="whomst">{{whomst}}</p>
     <p class="description">{{description}}</p>
-    <a class="task_url" href="{{task_url}}">link</a>
+    <a class="task_url {{action}}" href="{{task_url}}">link</a>
   </div>
 </div>
