--- a/template/meta.html
+++ b/template/meta.html
@@ -5,6 +5,7 @@
   <div><span class="label">meeting url:</span> <a href="{{meeting_url}}">{{meeting_url}}</a></div>
   <div><span class="label">agenda:</span> <a href="{{agenda_planning}}">{{agenda_planning}}</a></div>
   <div><span class="label">mattermost channel:</span> <a href="{{mattermost_channel}}">{{mattermost_channel}}</a></div>
+  <div><span class="label">notion page:</span> <a href="{{notion_page}}">{{notion_page}}</a></div>
   <div class="participants">
     <div class="label">participants:</div>
     <ul>
